cabal-version: 1.12

name:           liquid-haskell-test
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      MyLib
  hs-source-dirs:
      src
  build-depends:
      liquid-prelude,
      liquid-vector,
      liquidhaskell,
      base,
      containers,
      vector
  default-language: Haskell2010
